[package]
name = "btm"
version = "0.6.3"
edition = "2021"
keywords = ["vcs", "snapshot", "zfs", "btrfs"]
license = "MIT"
authors = ["fanhui.x@gmail.com"]
description = "Blockchain Time Machine"
homepage = "https://github.com/ccmlm/btm"
repository = "https://github.com/ccmlm/btm.git"

[dependencies]
ruc = { version = "1.0.5", features = ["rich"]}
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
once_cell = "1.10.0"
nix = "0.23.1"

[[bin]]
name = "btm"
path = "src/bins/btm.rs"
